# deep-ml-from-scratch

./: .gitignore  CMakeLists.txt  Doxyfile  requirements.txt
cmake/: OpenCV.cmake  spdlog.cmake
src/: CommonMacros.h
src/datautils/: csv.h  matrix_representation.h
src/examples/fashionmnist/: fashionmnist.cpp  fashionmnist.py  requirements.txt
src/network/: activation.cpp  activation.h  initializer.cpp  initializer.h  layer.cpp  layer.h  loss_functions.cpp  loss_functions.h  network.cpp  network.h  optimizer.cpp  optimizer.h
src/tests/: CMakeLists.txt  mnist_conv.cpp  test_binary_classifier.cc  test_cifar.py  test_data_preprocessing.cc  test_iris.cc  test_layer.cc  test_mnist.py  test_mnist_torch.cpp  test_setup.cc
